--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -3,6 +3,9 @@
 .dashboard {
     .leaderboardbox {
         height: @dashboardCubeHeight;
+        padding: 10px;
+    }
+    .score-board{
         padding: 0;
     }
 
