--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.css
@@ -426,7 +426,7 @@ Page footer
   text-align: center;
   position: fixed;
   z-index: 2;
-  bottom: 70px;
+  bottom: 10px;
   display: none;
   right: 60px;
   cursor: pointer;
@@ -435,6 +435,9 @@ Page footer
   .page-footer {
     display: none !important;
   }
+}
+body.homePage .page-footer .scroll-to-top {
+  bottom: 70px;
 }
 /***
 Theme Panel
