--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/layout.less
@@ -492,7 +492,7 @@ Page footer
         text-align: center;
         position: fixed;
         z-index: 2;
-        bottom: 70px;
+        bottom: 10px;
         display: none;
         right: 60px;
         cursor: pointer;
@@ -502,6 +502,10 @@ Page footer
         //override inline styling
         display: none !important;
     }
+}
+
+body.homePage .page-footer .scroll-to-top {
+    bottom: 70px;
 }
 
 
