--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_Gamification.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="leaderboardbox leaderboard box-style">
+﻿<div class="leaderboardbox leaderboard score-board box-style">
     <div class="bg-l">
         <md-icon md-svg-icon="p:stars" class="bg"></md-icon>
     </div>
