--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
@@ -129,9 +129,9 @@ a:hover {
 //    margin-top: 15px !important;
 //}
 
-.margin-bottom-15 {
+/*.margin-bottom-15 {
     margin-bottom: 15px !important;
-}
+}*/
 
 //.margin-bottom-20 {
 //    margin-bottom: 20px !important;
@@ -173,7 +173,7 @@ Custom Bootstrap Badges
     vertical-align: middle;
 }
 
-.badge.badge-roundless {
+/*.badge.badge-roundless {
     border-radius: 0 !important;
 }
 
@@ -190,7 +190,7 @@ Custom Bootstrap Badges
 .badge-danger {
     background-color: #F3565D;
     background-image: none;
-}
+}*/
 
 
 
