--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -70,7 +70,7 @@
         z-index: 10;
         height: ~"calc(100vh - @{heightOfHeader} + 5px)";
         background: @backgroundColor;
-        
+
 
         @media(min-width: 960px) {
             margin-top: 10px;
@@ -256,6 +256,7 @@
         .justifyContet(center);
         flex-shrink: 0;
         padding: 0 7px;
+        background-color: #F3565D;
     }
 }
 
