--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/_university.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="bottom">
             <div class="action-btn">@GeneralResources.BrowseClasses</div>
-            <div class="stats-bg" style="background: {{::u.info.stripColor}}"></div>
+            <div class="stats-bg" ng-style="background: {{::u.info.stripColor}}"></div>
             <div class="universityStats" layout="row" layout-align="space-between center">
                 <div>{{::u.info.boxes | megaNumber}} @GeneralResources.Classes</div>
                 <div>{{::u.info.users | megaNumber}} @GeneralResources.Members</div>
