got rid from some of componenets rounded css - to be continued...

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/components-rounded.less
@@ -198,7 +198,7 @@ Custom Bootstrap Badges
 Customized Bootstrap Buttons
 ***/
 /* Default buttons */
-.btn {
+/*.btn {
     border-width: 0;
     padding: 7px 14px;
     font-size: 14px;
@@ -234,12 +234,12 @@ Customized Bootstrap Buttons
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-}
+}*/
 
 /* Bootstrap buttons */
 
 
-.btn-primary {
+/*.btn-primary {
     color: #fff;
     background-color: #428bca;
     border-color: #357ebd;
@@ -274,9 +274,10 @@ Customized Bootstrap Buttons
     background-color: #428bca;
     border-color: #357ebd;
 }
-
+*/
 
 /* Help blocks */
+/*
 .help-block {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -392,7 +393,7 @@ Customized Bootstrap Buttons
 .form .form-section:first-child {
     margin-top: 5px;
 }
-
+*/
 
 
 /***
@@ -456,6 +457,7 @@ Forms
 }
 
 /* Form uneditable input */
+/*
 .uneditable-input {
     padding: 6px 12px;
     min-width: 206px;
@@ -470,9 +472,10 @@ Forms
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
-}
+}*/
 
 /* Form input sizing */
+/*
 .input-mini {
     width: 45px !important;
 }
@@ -522,19 +525,19 @@ select.input-sm {
     line-height: 28px;
     padding: 2px 10px;
 }
-
-@media (max-width: 768px) {
+   
+@media (max-width: 768px) { */
     /* 768px */
-    .input-large {
+    /*.input-large {
         width: 250px !important;
     }
 
     .input-xlarge {
         width: 300px !important;
     }
-}
+}*/
 /* Input  groups */
-.input-group .btn-default {
+/*.input-group .btn-default {
     border-color: #e5e5e5;
 }
 
@@ -547,7 +550,7 @@ select.input-sm {
 .input-group .input-group-addon > i {
     color: #999;
 }
-
+*/
 /* Input spinner */
 /*input[type="text"].spinner,
 input[type="password"].spinner,
