--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/IFrame.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/IFrame.cshtml
@@ -264,7 +264,20 @@
     .btnSignIn {
         background: rgba(40, 40, 40, 0.7) !important;
         width: 348px;
+        font-size: 20px;
+        max-width: 390px;
+        border-radius: 10px;
+        margin-top: 10px !important;
+        width: 60vw;
+        min-height: 50px;
+        line-height: 30px;
+        padding: 10px;
+        box-sizing: border-box;
     }
+
+        .btnSignIn:hover {
+            text-decoration: none;
+        }
 
     .btn.btn-lg, button.btn-lg, input[type="submit"].btn-lg, .button.btn-lg {
         border-radius: 10px;
@@ -293,20 +306,6 @@
         background-color: #3293f6;
         color: #ffffff;
     }
-
-    .btn-primary {
-        font-size: 20px;
-        max-width: 390px;
-        border-radius: 10px;
-        margin-top: 10px !important;
-        width: 60vw;
-        min-height: 50px;
-        line-height: 30px;
-    }
-
-        .btn-primary:hover {
-            text-decoration: none;
-        }
 
     .container {
         margin-top: 30vh;
